# mt-kahypar

./: .clang-format  .codecov.yml  .gitmodules  CMakeLists.txt
mt-kahypar/io/: CMakeLists.txt  command_line_options.cpp  csv_output.cpp  csv_output.h  hypergraph_factory.cpp  hypergraph_factory.h  hypergraph_io.cpp  hypergraph_io.h  partitioning_output.cpp  partitioning_output.h  sql_plottools_serializer.cpp  sql_plottools_serializer.h
mt-kahypar/parallel/: CMakeLists.txt  atomic_wrapper.h  chunking.h  definitions.h  hardware_topology.h  hwloc_topology.h  memory_pool.h  parallel_counting_sort.h  parallel_prefix_sum.h  tbb_initializer.h  thread_pinning_observer.h  work_stack.h
mt-kahypar/parallel/stl/: scalable_unique_ptr.h  scalable_vector.h  thread_locals.h  zero_allocator.h
mt-kahypar/partition/: CMakeLists.txt  context.cpp  context.h  context_enum_classes.cpp  context_enum_classes.h  conversion.cpp  deep_multilevel.cpp  deep_multilevel.h  factories.h  metrics.cpp  metrics.h  multilevel.cpp  multilevel.h  partitioner.cpp  partitioner.h  partitioner_facade.cpp  partitioner_facade.h  recursive_bipartitioning.cpp  recursive_bipartitioning.h
mt-kahypar/partition/coarsening/: CMakeLists.txt  coarsening_commons.h  deterministic_multilevel_coarsener.cpp  deterministic_multilevel_coarsener.h  experimental_coarsener.cpp  experimental_coarsener.h  factories.h  i_coarsener.h  i_uncoarsener.h  multilevel_coarsener.h  multilevel_coarsener_base.h  multilevel_uncoarsener.cpp  multilevel_uncoarsener.h  multilevel_vertex_pair_rater.h  nlevel_coarsener.h  nlevel_coarsener_base.h  nlevel_uncoarsener.cpp  nlevel_uncoarsener.h  nlevel_vertex_pair_rater.h  register_coarsening_algorithms.cpp  uncoarsener_base.h
mt-kahypar/partition/coarsening/multilevel/: clustering_context.h  concurrent_clustering_data.cpp  concurrent_clustering_data.h  multilevel_coarsener.h  multilevel_uncoarsener.cpp  multilevel_vertex_pair_rater.h  num_nodes_tracker.h  three_phase_coarsener.h
mt-kahypar/partition/coarsening/multilevel/clustering_algorithms/: cluster_splitting.h  single_round_lp.h  two_hop_clustering.h
mt-kahypar/partition/coarsening/nlevel/: nlevel_coarsener.h
mt-kahypar/partition/coarsening/policies/: rating_acceptance_policy.h  rating_degree_similarity_policy.h  rating_fixed_vertex_acceptance_policy.h  rating_heavy_node_penalty_policy.h  rating_score_policy.h  rating_tie_breaking_policy.h
mt-kahypar/partition/initial_partitioning/: CMakeLists.txt  bfs_initial_partitioner.cpp  bfs_initial_partitioner.h  factories.h  greedy_initial_partitioner.h  i_initial_partitioner.h  initial_partitioning_commons.h  initial_partitioning_data_container.h  label_propagation_initial_partitioner.cpp  label_propagation_initial_partitioner.h  pool_initial_partitioner.cpp  pool_initial_partitioner.h  random_initial_partitioner.cpp  random_initial_partitioner.h  register_flat_initial_partitioning_algorithms.h  register_initial_partitioning_algorithms.cpp
mt-kahypar/partition/initial_partitioning/flat/: pool_initial_partitioner.cpp
mt-kahypar/partition/initial_partitioning/policies/: gain_computation_policy.h  pq_selection_policy.h  pseudo_peripheral_start_nodes.h
mt-kahypar/partition/mapping/: all_pair_shortest_path.cpp  all_pair_shortest_path.h  greedy_mapping.cpp  greedy_mapping.h  initial_mapping.cpp  initial_mapping.h  kerninghan_lin.cpp  kerninghan_lin.h  set_enumerator.h  steiner_tree.cpp  steiner_tree.h  target_graph.cpp  target_graph.h
mt-kahypar/partition/preprocessing/: CMakeLists.txt  factories.h  register_preprocessing_algorithms.cpp
mt-kahypar/partition/preprocessing/community_detection/: local_moving_modularity.cpp  local_moving_modularity.h  parallel_louvain.cpp  parallel_louvain.h
mt-kahypar/partition/preprocessing/sparsification/: degree_zero_hn_remover.h  large_he_remover.h
mt-kahypar/partition/refinement/: CMakeLists.txt  do_nothing_refiner.h  factories.h  i_rebalancer.h  i_refiner.h  register_refinement_algorithms.cpp
mt-kahypar/partition/refinement/deterministic/: deterministic_jet_refiner.cpp  deterministic_jet_refiner.h  deterministic_label_propagation.cpp  deterministic_label_propagation.h
mt-kahypar/partition/refinement/flows/: do_nothing_refiner.h  flow_common.h  flow_hypergraph_builder.cpp  flow_hypergraph_builder.h  flow_refiner.cpp  flow_refiner.h  i_flow_refiner.h  parallel_construction.cpp  parallel_construction.h  problem_construction.cpp  problem_construction.h  quotient_graph.cpp  quotient_graph.h  refiner_adapter.cpp  refiner_adapter.h  scheduler.cpp  scheduler.h  sequential_construction.cpp  sequential_construction.h
mt-kahypar/partition/refinement/fm/: fm_commons.cpp  fm_commons.h  global_rollback.cpp  global_rollback.h  localized_kway_fm_core.cpp  localized_kway_fm_core.h  multitry_kway_fm.cpp  multitry_kway_fm.h  sequential_twoway_fm_refiner.cpp  sequential_twoway_fm_refiner.h  stop_rule.h
mt-kahypar/partition/refinement/gains/: bipartitioning_policy.h  gain_cache_ptr.h  gain_computation_base.h  gain_definitions.h
mt-kahypar/partition/refinement/jet/: jet_refiner.cpp
mt-kahypar/partition/refinement/judicious/: judicious_refinement.cpp  judicious_refinement.h  pq_strategy.h
mt-kahypar/partition/refinement/label_propagation/: jet_refiner.cpp  jet_refiner.h  label_propagation_refiner.cpp  label_propagation_refiner.h
mt-kahypar/partition/refinement/rebalancing/: advanced_rebalancer.cpp  advanced_rebalancer.h  jet_rebalancer.cpp  jet_rebalancer.h  rebalancer.h  rebalancer_v2.cpp  rebalancer_v2.h  simple_rebalancer.cpp  simple_rebalancer.h
mt-kahypar/partition/registries/: register_coarsening_algorithms.cpp  register_initial_partitioning_algorithms.cpp  register_memory_pool.cpp  register_memory_pool.h  register_policies.cpp  register_refinement_algorithms.cpp
mt-kahypar/utils/: CMakeLists.txt  bit_ops.h  cast.h  delete.h  exception.h  floating_point_comparisons.h  hash.h  hypergraph_statistics.h  initial_partitioning_stats.h  memory_tree.cpp  memory_tree.h  progress_bar.h  randomize.h  range.h  reproducible_random.h  stats.h  timer.h  utilities.h
(+202 files in other folders)
